--- a/index.html
+++ b/index.html
@@ -2,7 +2,39 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://sara.harka.com/favicon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://harka.com/favicons/sara/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://harka.com/favicons/sara/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://harka.com/favicons/sara/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="https://harka.com/favicons/sara/site.webmanifest"
+    />
+    <link
+      rel="mask-icon"
+      href="https://harka.com/favicons/sara/safari-pinned-tab.svg"
+      color="#008800"
+    />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta
+      name="msapplication-config"
+      content="https://harka.com/favicons/sara/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#111111" />
     <title>Screensaver</title>
     <style>
       body {
@@ -37,7 +69,7 @@
   </head>
   <body>
     <img
-      src="https://sara.harka.com/img/sara-harka.jpg"
+      src="https://harka.com/img/sara-harka.jpg"
       alt="Beautiful Sara Harka in a bouncy ball."
       width="75"
       height="75"
